--- a/css/main.css
+++ b/css/main.css
@@ -1505,6 +1505,7 @@ footer .last-block a {
 
 #our-gallery .search {
   display: flex;
+  flex-wrap: wrap;
   justify-content: center;
   align-items: center;
   gap: 24px;
@@ -1626,6 +1627,7 @@ footer .last-block a {
   font-style: normal;
   font-weight: 800;
   line-height: 150%;
+  width: 100%;
 }
 
 #our-gallery .main-block .block .bottom p {
@@ -1687,6 +1689,7 @@ footer .last-block a {
 
 .search-2 div {
   display: flex;
+  flex-wrap: wrap;
   justify-content: center;
   align-items: center;
   gap: 24px;
@@ -2679,7 +2682,7 @@ footer .last-block a {
   }
 
   #more-about-us p {
-    font-size: 22px;
+    font-size: 24px;
   }
 
   #more-about-us .more-about-us-block .imgs .two {
@@ -2696,6 +2699,7 @@ footer .last-block a {
 
   .vision-desc {
     padding: 0;
+    font-size: 24px;
   }
 
   .under-line-title {
@@ -2703,11 +2707,11 @@ footer .last-block a {
   }
 
   #our-gallery .main-block-gallery .gallery-block h3 {
-    font-size: 38px;
+    font-size: 24px;
   }
 
   #our-gallery .main-block-gallery .gallery-block p {
-    font-size: 24px;
+    font-size: 18px;
   }
 
   #planning figure {
@@ -2724,11 +2728,11 @@ footer .last-block a {
   }
 
   #cta .row h3 {
-    font-size: 34px;
+    font-size: 28px;
   }
 
   #cta .row p {
-    font-size: 24px;
+    font-size: 20px;
   }
 
   #cta-2 p {
@@ -2741,19 +2745,19 @@ footer .last-block a {
   }
 
   #another-cta .another-cta-text {
-    font-size: 30px;
-  }
-
-  #more-info p {
     font-size: 24px;
   }
 
+  #more-info p {
+    font-size: 20px;
+  }
+
   .our-service-title {
-    font-size: 17px !important;
+    font-size: 16px !important;
   }
 
   .tech-bd-cta h3 {
-    font-size: 44px;
+    font-size: 35px;
   }
 
   #our-services h3 {
@@ -2775,7 +2779,8 @@ footer .last-block a {
 
   .marketing-consulting h3 {
     text-align: center;
-    font-size: 42px;
+    font-size: 35px;
+    margin-bottom: 20px;
   }
 
   #our-gallery .search {
@@ -2798,8 +2803,13 @@ footer .last-block a {
     padding: 0 24px;
   }
 
+  #our-gallery .search input {
+    width: 100%;
+  }
+
   #our-gallery .search button {
     padding: 0 24px;
+    width: 100%;
   }
 
   #services p {
@@ -2844,6 +2854,94 @@ footer .last-block a {
     padding: 60px 0 !important;
   }
 
+  #our-gallery .main-block .block .bottom a {
+    display: block;
+    width: 100%;
+  }
+
+  #portfolio h3 {
+    font-size: 34px;
+  }
+
+  .testimonial {
+    padding: 35px 0;
+  }
+
+  .testimonial .slide {
+    width: 100%;
+  }
+
+  footer {
+    padding: 50px 0 30px 0;
+  }
+
+  .search-2 input {
+    width: 100%;
+  }
+
+  .search-2 button {
+    width: 100%;
+  }
+
+  #our-services .service-block {
+    padding: 10px 36px;
+  }
+
+  #our-importent h4 {
+    font-size: 24px;
+    font-weight: 800;
+    margin-bottom: 20px;
+  }
+
+  #our-importent p {
+    font-size: 23px;
+  }
+
+  #our-services h3 {
+    margin-bottom: 20px;
+  }
+
+  .marketing-consulting-3 .marketing-consulting-3-block h4 {
+    font-weight: 800;
+    font-size: 25px;
+  }
+
+  .marketing-consulting-3 .marketing-consulting-3-block p {
+    font-size: 19px !important;
+  }
+
+  #marketing-content h3 {
+    font-size: 38px;
+  }
+
+  #marketing-content .marketing-content-main-block .marketing-content-block {
+    gap: 30px;
+  }
+
+  #marketing-content .marketing-content-main-block .marketing-content-block p {
+    font-size: 20px;
+  }
+
+  .advertising-services h3 {
+    font-size: 40px;
+  }
+
+  #our-design .our-design-block {
+    gap: 20px;
+  }
+
+  #our-design .our-design-block h3 {
+    font-size: 24px;
+    font-weight: bold;
+  }
+
+  #our-design .our-design-block p {
+    font-size: 20px;
+  }
+
+  #our-design .our-design-block {
+    padding: 15px 0;
+  }
 }
 
 /* ------------------------ swiper ------------------------ */
@@ -3240,7 +3338,7 @@ form .submit {
   width: 40px;
   height: 40px;
   line-height: 40px;
-  background-color: rgba(0, 0, 0, 0.7);
+  background-color: rgba(0, 0, 0, 0.6);
   color: #fff;
   right: 20px;
   cursor: pointer;
@@ -3248,6 +3346,16 @@ form .submit {
   text-align: center;
   z-index: 9999;
   user-select: none;
+  transition: .2s linear;
+  -webkit-transition: .2s linear;
+  -moz-transition: .2s linear;
+  -ms-transition: .2s linear;
+  -o-transition: .2s linear;
+}
+
+.slider .up:hover,
+.slider .down:hover {
+  background-color: #000;
 }
 
 .up {
