--- a/css/main.css
+++ b/css/main.css
@@ -2624,6 +2624,124 @@ footer .last-block a {
   color: #fff;
 }
 
+#info-gallery .first-row-blog {
+  width: 615px;
+  margin: auto;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-between;
+}
+
+#info-gallery .first-row-blog span {
+  color: #9B9B9B;
+  text-align: center;
+  font-family: Tajawal;
+  font-size: 28px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 150%;
+}
+
+#info-gallery .second-row ul {
+  list-style-type: disc;
+  list-style-position: inside;
+}
+
+#info-gallery .second-row ul li {
+  color: #181818;
+  text-align: justify;
+  font-family: Tajawal;
+  font-size: 28px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 150%;
+}
+
+#info-gallery .second-row span {
+  color: #181818;
+  text-align: justify;
+  font-family: Tajawal;
+  font-size: 28px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 150%;
+}
+
+#info-gallery .row-three .row-three-block-read-more .one-div {
+  position: relative;
+}
+
+#info-gallery .row-three .row-three-block-read-more img {
+  width: 100%;
+  height: 222px;
+  border-top-right-radius: 10px;
+  border-top-left-radius: 10px;
+  position: relative;
+}
+
+#info-gallery .row-three .row-three-block-read-more .group-buttons {
+  position: absolute;
+  z-index: 888;
+  bottom: 30px;
+  right: 14px;
+}
+
+#info-gallery .row-three .row-three-block-read-more .group-buttons a {
+  padding: 15px 48px;
+  color: #1B4071;
+  font-family: Cabin;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  text-transform: capitalize;
+  border-radius: 5px;
+  background: #FFF;
+}
+
+#info-gallery .row-three .row-three-block-read-more .info-row-three-block-read-more {
+  border-radius: 0px 0px 10px 10px;
+  background: #1B4071;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+  display: flex;
+  padding: 24px;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 8px;
+}
+
+#info-gallery .row-three .row-three-block-read-more .info-row-three-block-read-more h4 {
+  color: #FFF;
+  text-align: right;
+  font-family: Cabin;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 123%;
+}
+
+#info-gallery .row-three .row-three-block-read-more .info-row-three-block-read-more p {
+  color: #FFF;
+  text-align: right;
+  font-family: Cabin;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 157.4%;
+}
+
+#info-gallery .row-three .row-three-block-read-more .info-row-three-block-read-more a {
+  color: #FFF;
+  font-family: Cabin;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  text-decoration-line: underline;
+}
+
+
 /************************************ END Services  ************************************/
 
 /************************************ START Blog  ************************************/
@@ -3133,6 +3251,22 @@ footer .last-block a {
 
   .info-gallery a.active {
     color: #fff !important;
+  }
+
+  #info-gallery div p {
+    text-align: right !important;
+  }
+
+  #info-gallery .second-row ul li {
+    text-align: right;
+  }
+
+  #info-gallery .second-row span {
+    text-align: right;
+  }
+
+  #info-gallery .second-row p {
+    margin-bottom: 10px;
   }
 }
 
